--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -2,7 +2,7 @@
 //////////////////////////////
 // 1. Patrones de colores
 //////////////////////////////
-$principal:#d2cf14;
+$principal:#DAF7A6;
 $secundario: #d2cf14;
 $blanco:#273746;
 //////////////////////////////
