--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -4,7 +4,7 @@
 //////////////////////////////
 $principal:#DAF7A6;
 $secundario: #d2cf14;
-$blanco:#273746;
+$blanco:#A6E5F7;
 //////////////////////////////
 /// 2. Modificando las variables de Bootstrap
 //////////////////////////////
