--- a/css/estilos.css
+++ b/css/estilos.css
@@ -29,7 +29,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #DAF7A6;
+  --bs-primary: #9391fd;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -37,7 +37,7 @@
   --bs-danger: #dc3545;
   --bs-light: #A6E5F7;
   --bs-dark: #212529;
-  --bs-primary-rgb: 218, 247, 166;
+  --bs-primary-rgb: 147, 145, 253;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -68,8 +68,8 @@
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: #DAF7A6;
-  --bs-link-hover-color: #aec685;
+  --bs-link-color: #9391fd;
+  --bs-link-hover-color: #7674ca;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
 }
@@ -670,19 +670,20 @@ progress {
 .row {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
-  display: block;
+  display: flex;
   flex-wrap: wrap;
-  margin-top: 40px;
-  margin-right: 40px;
-  margin-left: 40px;
+  margin-top: calc(-1 * var(--bs-gutter-y));
+  margin-right: calc(-0.5 * var(--bs-gutter-x));
+  margin-left: calc(-0.5 * var(--bs-gutter-x));
 }
 .row > * {
   flex-shrink: 0;
   width: 100%;
   max-width: 100%;
-  padding-right: 40px;
-  padding-left: 40px;
-  margin-top: 40px;
+  padding-right: calc(var(--bs-gutter-x) * 0.5);
+  padding-left: calc(var(--bs-gutter-x) * 0.5);
+  margin-top: var(--bs-gutter-y);
+
 }
 
 .col {
@@ -1816,13 +1817,13 @@ progress {
 
 .table-primary {
   --bs-table-color: #000;
-  --bs-table-bg: #f8fded;
-  --bs-table-border-color: #dfe4d5;
-  --bs-table-striped-bg: #ecf0e1;
+  --bs-table-bg: #e9e9ff;
+  --bs-table-border-color: #d2d2e6;
+  --bs-table-striped-bg: #ddddf2;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #dfe4d5;
+  --bs-table-active-bg: #d2d2e6;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #e5eadb;
+  --bs-table-hover-bg: #d8d8ec;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -2023,9 +2024,9 @@ progress {
 .form-control:focus {
   color: #212529;
   background-color: #fff;
-  border-color: #edfbd3;
+  border-color: #c9c8fe;
   outline: 0;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075), 0 0 0 0.25rem rgba(218, 247, 166, 0.25);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075), 0 0 0 0.25rem rgba(147, 145, 253, 0.25);
 }
 .form-control::-webkit-date-and-time-value {
   height: 1.5em;
@@ -2210,9 +2211,9 @@ textarea.form-control-lg {
   }
 }
 .form-select:focus {
-  border-color: #edfbd3;
+  border-color: #c9c8fe;
   outline: 0;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075), 0 0 0 0.25rem rgba(218, 247, 166, 0.25);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075), 0 0 0 0.25rem rgba(147, 145, 253, 0.25);
 }
 .form-select[multiple], .form-select[size]:not([size="1"]) {
   padding-right: 0.75rem;
@@ -2291,13 +2292,13 @@ textarea.form-control-lg {
   filter: brightness(90%);
 }
 .form-check-input:focus {
-  border-color: #edfbd3;
+  border-color: #c9c8fe;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(218, 247, 166, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(147, 145, 253, 0.25);
 }
 .form-check-input:checked {
-  background-color: #DAF7A6;
-  border-color: #DAF7A6;
+  background-color: #9391fd;
+  border-color: #9391fd;
 }
 .form-check-input:checked[type=checkbox] {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
@@ -2306,8 +2307,8 @@ textarea.form-control-lg {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: #DAF7A6;
-  border-color: #DAF7A6;
+  background-color: #9391fd;
+  border-color: #9391fd;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2337,7 +2338,7 @@ textarea.form-control-lg {
   }
 }
 .form-switch .form-check-input:focus {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23edfbd3'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23c9c8fe'/%3e%3c/svg%3e");
 }
 .form-switch .form-check-input:checked {
   background-position: right center;
@@ -2381,10 +2382,10 @@ textarea.form-control-lg {
   outline: 0;
 }
 .form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(218, 247, 166, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(147, 145, 253, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(218, 247, 166, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(147, 145, 253, 0.25);
 }
 .form-range::-moz-focus-outer {
   border: 0;
@@ -2393,7 +2394,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #DAF7A6;
+  background-color: #9391fd;
   border: 0;
   border-radius: 1rem;
   box-shadow: 0 0.1rem 0.25rem rgba(0, 0, 0, 0.1);
@@ -2409,7 +2410,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-webkit-slider-thumb:active {
-  background-color: #f4fde4;
+  background-color: #dfdefe;
 }
 .form-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -2424,7 +2425,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #DAF7A6;
+  background-color: #9391fd;
   border: 0;
   border-radius: 1rem;
   box-shadow: 0 0.1rem 0.25rem rgba(0, 0, 0, 0.1);
@@ -2440,7 +2441,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-moz-range-thumb:active {
-  background-color: #f4fde4;
+  background-color: #dfdefe;
 }
 .form-range::-moz-range-track {
   width: 100%;
@@ -2898,19 +2899,19 @@ textarea.form-control-lg {
 
 .btn-primary {
   --bs-btn-color: #000;
-  --bs-btn-bg: #DAF7A6;
-  --bs-btn-border-color: #DAF7A6;
+  --bs-btn-bg: #9391fd;
+  --bs-btn-border-color: #9391fd;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #e0f8b3;
-  --bs-btn-hover-border-color: #def8af;
-  --bs-btn-focus-shadow-rgb: 185, 210, 141;
+  --bs-btn-hover-bg: #a3a2fd;
+  --bs-btn-hover-border-color: #9e9cfd;
+  --bs-btn-focus-shadow-rgb: 125, 123, 215;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #e1f9b8;
-  --bs-btn-active-border-color: #def8af;
+  --bs-btn-active-bg: #a9a7fd;
+  --bs-btn-active-border-color: #9e9cfd;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #DAF7A6;
-  --bs-btn-disabled-border-color: #DAF7A6;
+  --bs-btn-disabled-bg: #9391fd;
+  --bs-btn-disabled-border-color: #9391fd;
 }
 
 .btn-secondary {
@@ -3033,19 +3034,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  --bs-btn-color: #DAF7A6;
-  --bs-btn-border-color: #DAF7A6;
+  --bs-btn-color: #9391fd;
+  --bs-btn-border-color: #9391fd;
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #DAF7A6;
-  --bs-btn-hover-border-color: #DAF7A6;
-  --bs-btn-focus-shadow-rgb: 218, 247, 166;
+  --bs-btn-hover-bg: #9391fd;
+  --bs-btn-hover-border-color: #9391fd;
+  --bs-btn-focus-shadow-rgb: 147, 145, 253;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #DAF7A6;
-  --bs-btn-active-border-color: #DAF7A6;
+  --bs-btn-active-bg: #9391fd;
+  --bs-btn-active-border-color: #9391fd;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #DAF7A6;
+  --bs-btn-disabled-color: #9391fd;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #DAF7A6;
+  --bs-btn-disabled-border-color: #9391fd;
   --bs-gradient: none;
 }
 
@@ -3180,7 +3181,7 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #6c757d;
   --bs-btn-disabled-border-color: transparent;
   --bs-btn-box-shadow: none;
-  --bs-btn-focus-shadow-rgb: 185, 210, 141;
+  --bs-btn-focus-shadow-rgb: 125, 123, 215;
   text-decoration: underline;
 }
 .btn-link:focus {
@@ -3286,7 +3287,7 @@ textarea.form-control-lg {
   --bs-dropdown-link-hover-color: #1e2125;
   --bs-dropdown-link-hover-bg: #e9ecef;
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: #DAF7A6;
+  --bs-dropdown-link-active-bg: #9391fd;
   --bs-dropdown-link-disabled-color: #adb5bd;
   --bs-dropdown-item-padding-x: 1rem;
   --bs-dropdown-item-padding-y: 0.25rem;
@@ -3552,7 +3553,7 @@ textarea.form-control-lg {
   --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
   --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: #DAF7A6;
+  --bs-dropdown-link-active-bg: #9391fd;
   --bs-dropdown-link-disabled-color: #adb5bd;
   --bs-dropdown-header-color: #adb5bd;
 }
@@ -3742,7 +3743,7 @@ textarea.form-control-lg {
 .nav-pills {
   --bs-nav-pills-border-radius: 0.375rem;
   --bs-nav-pills-link-active-color: #fff;
-  --bs-nav-pills-link-active-bg: #DAF7A6;
+  --bs-nav-pills-link-active-bg: #9391fd;
 }
 .nav-pills .nav-link {
   background: none;
@@ -4243,6 +4244,7 @@ textarea.form-control-lg {
   border: var(--bs-card-border-width) solid var(--bs-card-border-color);
   border-radius: var(--bs-card-border-radius);
   box-shadow: var(--bs-card-box-shadow);
+  margin: auto;
 }
 .card > hr {
   margin-right: 0;
@@ -4413,13 +4415,13 @@ textarea.form-control-lg {
   --bs-accordion-btn-icon-width: 1.25rem;
   --bs-accordion-btn-icon-transform: rotate(-180deg);
   --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
-  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23c4de95'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-  --bs-accordion-btn-focus-border-color: #edfbd3;
-  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(218, 247, 166, 0.25);
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%238483e4'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-focus-border-color: #c9c8fe;
+  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(147, 145, 253, 0.25);
   --bs-accordion-body-padding-x: 1.25rem;
   --bs-accordion-body-padding-y: 1rem;
-  --bs-accordion-active-color: #c4de95;
-  --bs-accordion-active-bg: #fbfef6;
+  --bs-accordion-active-color: #8483e4;
+  --bs-accordion-active-bg: #f4f4ff;
 }
 
 .accordion-button {
@@ -4578,10 +4580,10 @@ textarea.form-control-lg {
   --bs-pagination-hover-border-color: #dee2e6;
   --bs-pagination-focus-color: var(--bs-link-hover-color);
   --bs-pagination-focus-bg: #e9ecef;
-  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(218, 247, 166, 0.25);
+  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(147, 145, 253, 0.25);
   --bs-pagination-active-color: #fff;
-  --bs-pagination-active-bg: #DAF7A6;
-  --bs-pagination-active-border-color: #DAF7A6;
+  --bs-pagination-active-bg: #9391fd;
+  --bs-pagination-active-border-color: #9391fd;
   --bs-pagination-disabled-color: #6c757d;
   --bs-pagination-disabled-bg: #fff;
   --bs-pagination-disabled-border-color: #dee2e6;
@@ -4723,12 +4725,12 @@ textarea.form-control-lg {
 }
 
 .alert-primary {
-  --bs-alert-color: #576342;
-  --bs-alert-bg: #f8fded;
-  --bs-alert-border-color: #f4fde4;
+  --bs-alert-color: #585798;
+  --bs-alert-bg: #e9e9ff;
+  --bs-alert-border-color: #dfdefe;
 }
 .alert-primary .alert-link {
-  color: #464f35;
+  color: #46467a;
 }
 
 .alert-secondary {
@@ -4812,7 +4814,7 @@ textarea.form-control-lg {
   --bs-progress-border-radius: 0.375rem;
   --bs-progress-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
   --bs-progress-bar-color: #fff;
-  --bs-progress-bar-bg: #DAF7A6;
+  --bs-progress-bar-bg: #9391fd;
   --bs-progress-bar-transition: width 0.6s ease;
   display: flex;
   height: var(--bs-progress-height);
@@ -4872,8 +4874,8 @@ textarea.form-control-lg {
   --bs-list-group-disabled-color: #6c757d;
   --bs-list-group-disabled-bg: #fff;
   --bs-list-group-active-color: #fff;
-  --bs-list-group-active-bg: #DAF7A6;
-  --bs-list-group-active-border-color: #DAF7A6;
+  --bs-list-group-active-bg: #9391fd;
+  --bs-list-group-active-border-color: #9391fd;
   display: flex;
   flex-direction: column;
   padding-left: 0;
@@ -5096,17 +5098,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-primary {
-  color: #576342;
-  background-color: #f8fded;
+  color: #585798;
+  background-color: #e9e9ff;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #576342;
-  background-color: #dfe4d5;
+  color: #585798;
+  background-color: #d2d2e6;
 }
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #576342;
-  border-color: #576342;
+  background-color: #585798;
+  border-color: #585798;
 }
 
 .list-group-item-secondary {
@@ -5225,7 +5227,7 @@ textarea.form-control-lg {
 }
 .btn-close:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(218, 247, 166, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(147, 145, 253, 0.25);
   opacity: 1;
 }
 .btn-close:disabled, .btn-close.disabled {
@@ -5873,7 +5875,6 @@ textarea.form-control-lg {
   position: relative;
   width: 100%;
   overflow: hidden;
-  margin: auto;
 }
 .carousel-inner::after {
   display: block;
@@ -6774,7 +6775,7 @@ textarea.form-control-lg {
 
 .text-bg-primary {
   color: #000 !important;
-  background-color: RGBA(218, 247, 166, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(147, 145, 253, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-secondary {
@@ -6813,10 +6814,10 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-  color: #DAF7A6 !important;
+  color: #9391fd !important;
 }
 .link-primary:hover, .link-primary:focus {
-  color: #e1f9b8 !important;
+  color: #a9a7fd !important;
 }
 
 .link-secondary {
