--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -2,7 +2,7 @@
 //////////////////////////////
 // 1. Patrones de colores
 //////////////////////////////
-$principal:#DAF7A6;
+$principal:#9391fd;
 $secundario: #d2cf14;
 $blanco:#A6E5F7;
 //////////////////////////////
